fix .website-shortcuts gap size

--- a/desktop.css
+++ b/desktop.css
@@ -18,6 +18,6 @@
 
     .website-shortcuts {
         flex-direction: row;
-        gap: 20px;
+        gap: 30px;
     }
 }
